Fix height of product title so price and details are horizontally aligned

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -176,6 +176,10 @@ accessed on March 3rd, 2022, at 04:27.
     object-fit: contain;
 }
 
+#product-title-in-card {
+    height: 70px;
+}
+
 .go-to-top-button {
     height: 50px;
     width: 50px;
